FIXED THE HEADER, TO AVOID TEXT OVERFLOWING

--- a/assets/scss/config/_header.scss
+++ b/assets/scss/config/_header.scss
@@ -19,7 +19,7 @@ header {
     font-weight: 800;
 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+    z-index: 1000;
 
     nav {
         /* background-color: rgba(7, 48, 34, 0.521); */
